--- a/src/app/timer/timer.component.html
+++ b/src/app/timer/timer.component.html
@@ -1,7 +1,10 @@
 <div class="timer">
-  <app-progress-bar [progress]="(init-countdown)/init*100"></app-progress-bar>
+  <app-progress-bar [progress]="progress"></app-progress-bar>
 
   <app-display [time]="countdown"></app-display>
-
-  <button (click)="startCountdown()">RESTART</button>
+  <div class="buttons">
+    <button *ngIf="timerService.paused" (click) =" timerService.toogleCountdown()">Play</button>
+    <button *ngIf="!timerService.paused" (click) =" timerService.toogleCountdown()">Pause</button>
+    <button (click)="timerService.restartCountdown()"> Restart </button>
+  </div>
 </div>
